[project]
name = "robot-reporter"
version = "2.0.0"
description = "Parse Robot Framework output.xml and post results to GitHub"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
robot-reporter = "reporter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
artifacts = ["reporter.py", "templates/report.jinja"]
